--- a/infra/terraform.tfvars.example
+++ b/infra/terraform.tfvars.example
@@ -20,6 +20,7 @@ rpc_url = "https://sepolia.base.org"
 # agent_provider_url  = ""
 # agent_docs_url      = ""
 # agent_icon_url      = ""
+# public_agent_url    = "https://agent-trust-gateway.port402.com"
 
 # ─── Optional ──────────────────────────────────────────────────────
 # aws_region        = "us-west-2"  # Default region for all Port402 agents
